--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#FF0F03</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="blanco">#FFF</color>
+    <color name="negro">#000</color>
+    <color name="rojo">#D50000</color>
+    <color name="rojoClaro">#EF5250</color>
 </resources>
