--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,7 +46,7 @@
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_weight="9"
-        android:drawableLeft="@drawable/candado"
+        android:drawableLeft=""
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="@string/password"
