--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,7 +49,7 @@
         android:drawableLeft=""
         android:drawablePadding="10dp"
         android:ems="10"
-        android:hint="@string/password"
+        android:hint="David Calle"
         android:textColorHint="@color/blanco"
         android:inputType="textPassword"
         android:background="@drawable/txt_btn_style1"
