--- a/app/src/main/res/layout/fragment_products.xml
+++ b/app/src/main/res/layout/fragment_products.xml
@@ -8,7 +8,7 @@
 
 
     <ImageView
-        android:id="@+id/iv_background"
+        android:id="@+id/img_restaurant_product_bg"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:scaleType="fitXY"
@@ -16,46 +16,36 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/background" />
+        app:srcCompat="@drawable/background_hamburguesa_blurred" />
 
     <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="0dp"
-        android:layout_height="140dp"
+        android:id="@+id/img_restaurant_icon"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="140dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.134"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/iv_background"
-        app:srcCompat="@drawable/ic_deliveryman" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/burgerking" />
+
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="DOMIFOODS"
-        android:textAlignment="center"
+        android:layout_marginEnd="20dp"
+        android:fontFamily="@font/nimbusbol"
+        android:text="Burger King"
+        android:textAlignment="textEnd"
         android:textColor="#ffffff"
-        android:textSize="25sp"
-        android:fontFamily="@font/comickings"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/img_restaurant_product_bg"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.804"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="#FF0F03"
-        android:fontFamily="@font/comickings"
-        android:letterSpacing="0.1"
-        android:padding="10dp"
-        android:text="RESTAURANTES"
-        android:textAlignment="center"
-        android:textColor="#ffffff"
-        android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_background" />
 
     <ImageView
         android:clickable="true"
@@ -68,20 +58,34 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_button_back" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview_restaurants"
+    <TextView
+        android:id="@+id/textView6"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="5dp"
+        android:fontFamily="@font/nimbusreg"
+        android:textColor="#000000"
+        android:textSize="15dp"
+        android:text="Calle 75N # 45-09 \n 8 382459 - 325 4789654"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/img_restaurant_icon"
+        app:layout_constraintTop_toBottomOf="@+id/img_restaurant_product_bg" />
 
-        app:layout_constraintBottom_toBottomOf="parent"
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/nimbusbol"
+        android:text="Categoria"
+        android:textColor="#F10B00"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-
+        app:layout_constraintTop_toBottomOf="@+id/img_restaurant_icon" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
