--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,13 +25,13 @@
         android:id="@+id/editTextUser"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_weight="9"
-        android:drawableLeft=""
+        android:layout_marginLeft="45dp"
+        android:layout_marginRight="45dp"
+        android:layout_weight="3"
+        android:drawableLeft="@drawable/ic_user"
         android:drawablePadding="10dp"
         android:ems="10"
-        android:hint="Lino Alejandro"
+        android:hint="Usuario"
         android:textColorHint="@color/blanco"
         android:inputType="textPersonName"
         android:background="@drawable/txt_btn_style1"
@@ -43,13 +43,13 @@
         android:id="@+id/editTextPassword"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_weight="9"
-        android:drawableLeft=""
+        android:layout_marginLeft="45dp"
+        android:layout_marginRight="45dp"
+        android:layout_weight="3"
+        android:drawableLeft="@drawable/ic_padlock"
         android:drawablePadding="10dp"
         android:ems="10"
-        android:hint="David Calle"
+        android:hint="Contraseña"
         android:textColorHint="@color/blanco"
         android:inputType="textPassword"
         android:background="@drawable/txt_btn_style1"
@@ -59,14 +59,14 @@
     <Button
         android:id="@+id/buttonIngresar"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/btn_style2"
-        android:textColor="@drawable/txt_btn_style2"
+        android:layout_height="0dp"
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/btn_style3"
+        android:textColor="@drawable/txt_btn_style3"
         android:text="@string/ingresar"
-        android:layout_weight="10"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
+        android:layout_weight="3"
+        android:layout_marginLeft="45dp"
+        android:layout_marginRight="45dp"
 
         />
 
@@ -75,12 +75,12 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginBottom="100dp"
-        android:background="@drawable/btn_style2"
-        android:textColor="@drawable/txt_btn_style2"
+        android:background="@drawable/btn_style3"
+        android:textColor="@drawable/txt_btn_style3"
         android:text="@string/registrarse"
-        android:layout_weight="10"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
+        android:layout_weight="3"
+        android:layout_marginLeft="45dp"
+        android:layout_marginRight="45dp"
 
         />
 
