--- a/app/src/main/res/drawable/btn_style3.xml
+++ b/app/src/main/res/drawable/btn_style3.xml
@@ -4,6 +4,6 @@
     <corners android:radius="5dp" />
     <stroke
         android:width="1dp"
-        android:color="@android:color/holo_red_dark" />
+        android:color="@android:color/primary_text_dark" />
 
 </shape>
