--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,12 +7,22 @@
     android:orientation="vertical"
     android:gravity="center"
     android:padding="10dp"
-    tools:context=".Register1Activity">
+    tools:context=".registerActivity">
+
+    <ImageView
+        android:id="@+id/imageViewLogo"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:layout_weight="20"
+        app:srcCompat="@drawable/ic_logoregister"
+
+        android:layout_marginBottom="10dp"
+        />
 
     <TextView
         android:id="@+id/textView1"
-        android:layout_width="295dp"
-        android:layout_height="10dp"
+        android:layout_width="259dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:scrollbarThumbHorizontal="@color/negro"
         android:scrollbarThumbVertical="@color/negro"
@@ -22,25 +32,25 @@
     <EditText
         android:id="@+id/editTextFN"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginLeft="45dp"
-        android:layout_marginRight="45dp"
-        android:layout_weight="3"
-        android:drawableLeft="@drawable/ic_user"
-        android:drawablePadding="10dp"
+        android:layout_height="19dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginBottom="15dp"
+        android:layout_weight="4"
+        android:background="@drawable/sty_border_editext"
+        android:drawableLeft="@drawable/ic_user3"
+        android:drawablePadding="5dp"
         android:ems="10"
         android:hint="Nombre"
-        android:textColorHint="@color/rojoClaro"
         android:inputType="textPersonName"
-        android:background="@drawable/sty_border_editext"
-        android:layout_marginBottom="15dp"
+        android:textColorHint="@color/rojoClaro"
 
         />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="299dp"
-        android:layout_height="2dp"
+        android:layout_width="259dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Apellido"
         android:textColor="#000000" />
@@ -48,25 +58,25 @@
     <EditText
         android:id="@+id/editTextCorreo"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginLeft="45dp"
-        android:layout_marginRight="45dp"
-        android:layout_weight="3"
-        android:drawableLeft="@drawable/ic_user"
+        android:layout_height="17dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginBottom="15dp"
+        android:layout_weight="4"
+        android:background="@drawable/sty_border_editext"
+        android:drawableLeft="@drawable/ic_user3"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Correo"
-        android:textColorHint="@color/rojoClaro"
         android:inputType="textPersonName"
-        android:background="@drawable/sty_border_editext"
-        android:layout_marginBottom="15dp"
+        android:textColorHint="@color/rojoClaro"
 
         />
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="295dp"
-        android:layout_height="3dp"
+        android:layout_width="269dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Tipo de Documento"
         android:textColor="#000000" />
@@ -74,25 +84,25 @@
     <EditText
         android:id="@+id/editTextDir"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginLeft="45dp"
-        android:layout_marginRight="45dp"
-        android:layout_weight="3"
+        android:layout_height="20dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginBottom="15dp"
+        android:layout_weight="4"
+        android:background="@drawable/sty_border_editext"
         android:drawableLeft="@drawable/ic_user"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Tipo de Documento"
-        android:textColorHint="@color/rojoClaro"
         android:inputType="textPersonName"
-        android:background="@drawable/sty_border_editext"
-        android:layout_marginBottom="15dp"
+        android:textColorHint="@color/rojoClaro"
 
         />
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="295dp"
-        android:layout_height="2dp"
+        android:layout_width="261dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Documento"
         android:textColor="#000000" />
@@ -101,25 +111,25 @@
     <EditText
         android:id="@+id/editTextPassword"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginLeft="45dp"
-        android:layout_marginRight="45dp"
-        android:layout_weight="3"
-        android:drawableLeft="@drawable/ic_padlock"
+        android:layout_height="23dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginBottom="15dp"
+        android:layout_weight="4"
+        android:background="@drawable/sty_border_editext"
+        android:drawableLeft="@drawable/ic_user2"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Número de Documento"
-        android:textColorHint="@color/rojoClaro"
         android:inputType="textPersonName"
-        android:background="@drawable/sty_border_editext"
-        android:layout_marginBottom="15dp"
+        android:textColorHint="@color/rojoClaro"
 
         />
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="302dp"
-        android:layout_height="2dp"
+        android:layout_width="259dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Celular"
         android:textColor="#000000" />
@@ -127,33 +137,30 @@
     <EditText
         android:id="@+id/editTextConfPassword"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginLeft="45dp"
-        android:layout_marginRight="45dp"
-        android:layout_weight="3"
-        android:drawableLeft="@drawable/ic_padlock"
+        android:layout_height="20dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginBottom="50dp"
+        android:layout_weight="4"
+        android:background="@drawable/sty_border_editext"
+        android:drawableLeft="@drawable/ic_cel"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Número de Celular"
-        android:textColorHint="@color/rojoClaro"
         android:inputType="textPassword"
-        android:background="@drawable/sty_border_editext"
-        android:layout_marginBottom="20dp"
-        />
+        android:textColorHint="@color/rojoClaro" />
 
     <Button
         android:id="@+id/buttonRegistrarse"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginLeft="45dp"
-        android:layout_marginRight="45dp"
-        android:layout_marginBottom="100dp"
+        android:layout_height="20dp"
+        android:layout_marginLeft="85dp"
+        android:layout_marginRight="85dp"
+        android:layout_marginBottom="70dp"
         android:layout_weight="3"
         android:background="@drawable/btn_style1"
         android:text="Siguiente"
         android:textColor="@drawable/txt_btn_style2"
 
         />
-
-
 </LinearLayout>
