--- a/app/src/main/res/layout/activity_register2.xml
+++ b/app/src/main/res/layout/activity_register2.xml
@@ -7,12 +7,15 @@
     android:orientation="vertical"
     android:gravity="center"
     android:padding="10dp"
-    tools:context=".MainActivity">
+    tools:context=".Register2Activity"
+
+    >
+
 
     <TextView
         android:id="@+id/textView1"
-        android:layout_width="295dp"
-        android:layout_height="10dp"
+        android:layout_width="290dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:scrollbarThumbHorizontal="@color/negro"
         android:scrollbarThumbVertical="@color/negro"
@@ -21,78 +24,78 @@
 
     <EditText
         android:id="@+id/editTextFN"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_width="297dp"
+        android:layout_height="38dp"
         android:layout_marginLeft="45dp"
         android:layout_marginRight="45dp"
+        android:layout_marginBottom="15dp"
         android:layout_weight="3"
+        android:background="@drawable/sty_border_editext"
         android:drawableLeft="@drawable/ic_calendar"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="DD / MM / AA"
-        android:textColorHint="@color/rojoClaro"
         android:inputType="textPersonName"
-        android:background="@drawable/sty_border_editext"
-        android:layout_marginBottom="15dp"
+        android:textColorHint="@color/rojoClaro"
 
         />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="299dp"
-        android:layout_height="2dp"
+        android:layout_width="275dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Correo"
         android:textColor="#000000" />
 
     <EditText
         android:id="@+id/editTextCorreo"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_width="297dp"
+        android:layout_height="38dp"
         android:layout_marginLeft="45dp"
         android:layout_marginRight="45dp"
+        android:layout_marginBottom="15dp"
         android:layout_weight="3"
+        android:background="@drawable/sty_border_editext"
         android:drawableLeft="@drawable/ic_email"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Correo"
-        android:textColorHint="@color/rojoClaro"
         android:inputType="textPersonName"
-        android:background="@drawable/sty_border_editext"
-        android:layout_marginBottom="15dp"
+        android:textColorHint="@color/rojoClaro"
 
         />
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="295dp"
-        android:layout_height="3dp"
+        android:layout_width="278dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Dirección"
         android:textColor="#000000" />
 
     <EditText
         android:id="@+id/editTextDir"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_width="292dp"
+        android:layout_height="42dp"
         android:layout_marginLeft="45dp"
         android:layout_marginRight="45dp"
+        android:layout_marginBottom="20dp"
         android:layout_weight="3"
+        android:background="@drawable/sty_border_editext"
         android:drawableLeft="@drawable/ic_home"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Dirección"
-        android:textColorHint="@color/rojoClaro"
         android:inputType="textPersonName"
-        android:background="@drawable/sty_border_editext"
-        android:layout_marginBottom="15dp"
+        android:textColorHint="@color/rojoClaro"
 
         />
 
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="306dp"
-        android:layout_height="wrap_content"
+        android:layout_width="293dp"
+        android:layout_height="30dp"
         android:text="Genero"
         android:textColor="#000000" />
 
@@ -100,8 +103,6 @@
         android:layout_width="302dp"
         android:layout_height="52dp"
         android:orientation="horizontal">
-
-        >
 
         <RadioButton
             android:id="@+id/radio_masculino"
@@ -125,8 +126,8 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="295dp"
-        android:layout_height="2dp"
+        android:layout_width="290dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Contraseña"
         android:textColor="#000000" />
@@ -134,51 +135,50 @@
 
     <EditText
         android:id="@+id/editTextPassword"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_width="293dp"
+        android:layout_height="41dp"
         android:layout_marginLeft="45dp"
         android:layout_marginRight="45dp"
+        android:layout_marginBottom="15dp"
         android:layout_weight="3"
+        android:background="@drawable/sty_border_editext"
         android:drawableLeft="@drawable/ic_padlock"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Contraseña"
-        android:textColorHint="@color/rojoClaro"
         android:inputType="textPersonName"
-        android:background="@drawable/sty_border_editext"
-        android:layout_marginBottom="15dp"
+        android:textColorHint="@color/rojoClaro"
 
         />
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="302dp"
-        android:layout_height="2dp"
+        android:layout_width="286dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Confirmar Contraseña"
         android:textColor="#000000" />
 
     <EditText
         android:id="@+id/editTextConfPassword"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_width="295dp"
+        android:layout_height="36dp"
         android:layout_marginLeft="45dp"
         android:layout_marginRight="45dp"
+        android:layout_marginBottom="50dp"
         android:layout_weight="3"
+        android:background="@drawable/sty_border_editext"
         android:drawableLeft="@drawable/ic_padlock"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Confirmar Contraseña"
-        android:textColorHint="@color/rojoClaro"
         android:inputType="textPassword"
-        android:background="@drawable/sty_border_editext"
-        android:layout_marginBottom="20dp"
-        />
+        android:textColorHint="@color/rojoClaro" />
 
     <Button
         android:id="@+id/buttonRegistrarse"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_width="149dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="45dp"
         android:layout_marginRight="45dp"
         android:layout_marginBottom="100dp"
