La interfaz al seleccionar un restaurante ya se encuentra, por el momento es necesario configurar la navegabilidad entre la aplicación. Al usuar las transiciones de los fragments se convierte en algo tedioso. Por lo tanto, voy a intentar utilizar el navigation component

--- a/app/src/main/res/layout/fragment_restaurant.xml
+++ b/app/src/main/res/layout/fragment_restaurant.xml
@@ -29,7 +29,7 @@
         app:srcCompat="@drawable/ic_deliveryman" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tv_restaurant_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="DOMIFOODS"
@@ -42,7 +42,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tv_restaurants"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="#FF0F03"
@@ -79,7 +79,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_restaurants" />
 
 
 
