--- a/app/src/main/res/layout/activity_register1.xml
+++ b/app/src/main/res/layout/activity_register1.xml
@@ -12,18 +12,18 @@
     <ImageView
         android:id="@+id/imageViewLogo"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:layout_weight="20"
-        app:srcCompat="@drawable/ic_logoregister"
-
+        android:layout_height="186dp"
         android:layout_marginBottom="10dp"
-        />
+        android:layout_weight="20"
+
+        app:srcCompat="@drawable/ic_logoregister" />
 
     <TextView
         android:id="@+id/textView1"
         android:layout_width="259dp"
-        android:layout_height="wrap_content"
+        android:layout_height="32dp"
         android:layout_weight="1"
+        android:gravity="center_vertical"
         android:scrollbarThumbHorizontal="@color/negro"
         android:scrollbarThumbVertical="@color/negro"
         android:text="Nombre"
@@ -32,7 +32,7 @@
     <EditText
         android:id="@+id/editTextFN"
         android:layout_width="match_parent"
-        android:layout_height="19dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="45dp"
         android:layout_marginRight="45dp"
         android:layout_marginBottom="15dp"
@@ -50,7 +50,7 @@
     <TextView
         android:id="@+id/textView2"
         android:layout_width="259dp"
-        android:layout_height="wrap_content"
+        android:layout_height="29dp"
         android:layout_weight="1"
         android:text="Apellido"
         android:textColor="#000000" />
@@ -58,7 +58,7 @@
     <EditText
         android:id="@+id/editTextCorreo"
         android:layout_width="match_parent"
-        android:layout_height="17dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="45dp"
         android:layout_marginRight="45dp"
         android:layout_marginBottom="15dp"
@@ -76,7 +76,7 @@
     <TextView
         android:id="@+id/textView3"
         android:layout_width="269dp"
-        android:layout_height="wrap_content"
+        android:layout_height="31dp"
         android:layout_weight="1"
         android:text="Tipo de Documento"
         android:textColor="#000000" />
@@ -84,7 +84,7 @@
     <EditText
         android:id="@+id/editTextDir"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
+        android:layout_height="61dp"
         android:layout_marginLeft="45dp"
         android:layout_marginRight="45dp"
         android:layout_marginBottom="15dp"
@@ -102,7 +102,7 @@
     <TextView
         android:id="@+id/textView4"
         android:layout_width="261dp"
-        android:layout_height="wrap_content"
+        android:layout_height="32dp"
         android:layout_weight="1"
         android:text="Documento"
         android:textColor="#000000" />
@@ -111,7 +111,7 @@
     <EditText
         android:id="@+id/editTextPassword"
         android:layout_width="match_parent"
-        android:layout_height="23dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="45dp"
         android:layout_marginRight="45dp"
         android:layout_marginBottom="15dp"
@@ -129,7 +129,7 @@
     <TextView
         android:id="@+id/textView5"
         android:layout_width="259dp"
-        android:layout_height="wrap_content"
+        android:layout_height="33dp"
         android:layout_weight="1"
         android:text="Celular"
         android:textColor="#000000" />
@@ -137,8 +137,8 @@
     <EditText
         android:id="@+id/editTextConfPassword"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:layout_marginLeft="50dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="45dp"
         android:layout_marginRight="45dp"
         android:layout_marginBottom="45dp"
         android:layout_weight="4"
@@ -153,10 +153,10 @@
     <Button
         android:id="@+id/buttonSiguiente"
         android:layout_width="175dp"
-        android:layout_height="35dp"
+        android:layout_height="58dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
-        android:layout_marginBottom="70dp"
+        android:layout_marginBottom="20dp"
         android:layout_weight="3"
         android:background="@drawable/btn_style1"
         android:text="@string/siguiente"
