--- a/app/src/main/res/layout/activity_register2.xml
+++ b/app/src/main/res/layout/activity_register2.xml
@@ -206,6 +206,7 @@
         android:layout_weight="3"
         android:background="@drawable/btn_style1"
         android:text="Finalizar"
+        android:fontFamily="@font/comickings"
         android:textColor="@drawable/txt_btn_style2"
 
         />
