--- a/app/src/main/res/layout/fragment_deliverman.xml
+++ b/app/src/main/res/layout/fragment_deliverman.xml
@@ -33,7 +33,7 @@
         android:drawableBottom="@drawable/bg_color_splash"
         android:editable="true"
         android:fontFamily="sans-serif"
-        android:hint="   Numero de cedula"
+        android:hint="   Numero de  vehiculo"
         android:hyphenationFrequency="none"
         android:textColor="@color/negro"
         android:textColorHighlight="@color/negro"
@@ -87,7 +87,7 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="250dp"
         android:fontFamily="sans-serif-condensed-medium"
-        android:text="Tipo de vehiculo"
+        android:text="Identificacion"
         android:textColor="@color/negro"
         android:textSize="16sp"
         android:typeface="serif"
